# socket-client-serveur

./: CMakeLists.txt  ClientServeur_fr_CM.ts  README.md  client.cpp  client.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  serveur.cpp  serveur.h
